# plan-act-reflect-agent

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.yaml
data/corpus/: agent_workbench_docs.md  machine_learning_overview.md  python_basics.txt
docker/: Dockerfile
src/agent_workbench/: __init__.py  agent.py  api.py  api_events.py  api_hitl.py  cli.py  cost.py  hitl.py  logging.py  planner.py  planner_hier.py  reflection.py  safety.py  settings.py  telemetry.py  trace.py
src/agent_workbench/llm/: providers.py
src/agent_workbench/memory/: long_vector.py  short_sql.py
src/agent_workbench/skills/: __init__.py  base.py  registry.py
src/agent_workbench/skills/builtin/: fs.py  python_runner.py  rag.py  web.py
src/agent_workbench/tools/: fs.py  python_runner.py  rag.py  web.py
tests/: test_api_smoke.py  test_cli_smoke.py  test_hitl_flow.py  test_memory_parity.py  test_planner_hier.py  test_skills_contracts.py  test_tools_isolated.py  test_trace_replay.py
